proj1/testing/error/trivialerr5.inp
* B BETA I I III AAAA
Hello world
* B BETA I II III AAAA
ILBDA AMTAZ
